# onlessV2

./: PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
app/: layout.tsx  page.tsx
app/exam/: page.tsx
app/lib/: exam-logic.ts  test-logic.ts
app/test/: page.tsx
assets/: onless_canvas.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README  env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  booking.py  exam.py  organization.py  payment.py  question.py  user.py
backend/app/schemas/: __init__.py  auth.py  exam.py  user.py
backend/tests/: conftest.py  test_auth.py
config/: exam.config.ts  test.config.ts
data/: questions.ts
desktop/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/electron/: main.ts  preload.ts
desktop/src/: App.tsx  index.css
frontend/: .gitignore  package-lock.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/data/: questions.ts
frontend/types/: exam.types.ts
mobile/: App.tsx  package-lock.json  package.json
shared/: .gitignore  package.json  tsconfig.json
types/: exam.types.ts  test.types.ts
(+66 files in other folders)
